// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Nav > renders collapsed 1`] = `
<DocumentFragment>
  <div
    class="_wrapper_9cdc15"
    id="header-menu"
  >
    <nav
      aria-label="primary navigation"
      class="_nav_9cdc15"
    >
      <div
        class="_menuWrapper_9cdc15"
      >
        <ul
          aria-labelledby="header-menu-button"
          class="_menuList_12dd76"
        >
          <li>
            <a
              aria-current="page"
              class="_link_12dd76"
              href="/"
            >
              Home
            </a>
          </li>
          <li>
            <a
              class="_link_12dd76"
              href="/about-us"
            >
              About
            </a>
          </li>
        </ul>
      </div>
    </nav>
  </div>
</DocumentFragment>
`;

exports[`Nav > renders expanded 1`] = `
<DocumentFragment>
  <div
    class="_wrapper_9cdc15 _wrapperExpanded_9cdc15"
    id="header-menu"
  >
    <nav
      aria-label="primary navigation"
      class="_nav_9cdc15"
    >
      <div
        class="_menuWrapper_9cdc15"
      >
        <ul
          aria-labelledby="header-menu-button"
          class="_menuList_12dd76"
        >
          <li>
            <a
              aria-current="page"
              class="_link_12dd76"
              href="/"
            >
              Home
            </a>
          </li>
          <li>
            <a
              class="_link_12dd76"
              href="/about-us"
            >
              About
            </a>
          </li>
        </ul>
      </div>
    </nav>
  </div>
</DocumentFragment>
`;
